Restructure project for Netlify deployment

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Educational Prompt Management</title>
-  <link rel="stylesheet" href="/public/styles/main.css">
+  <link rel="stylesheet" href="/styles/main.css">
 </head>
 <body>
   <header>
@@ -330,7 +330,7 @@
     </main>
   </div>
   
-  <script src="/public/scripts/app.js"></script>
+  <script src="/scripts/app.js"></script>
   <script>
     // 사이드바 버튼 클릭 시 해당 섹션을 보여주는 함수
     function showSection(section) {
